--- a/LightweightFineTuning.ipynb
+++ b/LightweightFineTuning.ipynb
@@ -17,7 +17,7 @@
     "\n",
     "* PEFT technique: [Low-Rank Adaptation (LoRA)](https://huggingface.co/docs/peft/main/en/conceptual_guides/lora)\n",
     "* Model: [DistilBERT base model (uncased)](https://huggingface.co/distilbert/distilbert-base-uncased)\n",
-    "* Evaluation approach: Binary classification accuracy on the Test split of chosen dataset.\n",
+    "* Evaluation approach: There is no class imbalance in the chosen dataset so binary classification accuracy on the Test split was selected as the evaluation metric.\n",
     "* Fine-tuning dataset: [imdb](https://huggingface.co/datasets/stanfordnlp/imdb)"
    ]
   },
